deploy/manifests/dev/dash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-service
  namespace: mono-repo-dev
  labels:
    app: dash
    environment: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8050
    protocol: TCP
    name: http
  selector:
    app: dash
